--- a/src/main/resources/templates/create_student.html
+++ b/src/main/resources/templates/create_student.html
@@ -19,7 +19,7 @@
 						<label> Student First Name</label>
 						 <input type="text"
 							name="firstName" 
-							th:field="firstName" 
+							th:field="*{firstName}" 
 							class="form-control"
 							placeholder="Enter Student First Name"
 							/>
@@ -27,9 +27,8 @@
 					<div class = "form-group">
 						<label> Student Last Name</label> 
 						<input type="text"
-							type="text" 
 							name="lastName" 
-							th:field="lastName" 
+							th:field="*{lastName}" 
 							class="form-control" 
 							placeholder="Enter Student last Name"
 							/>
@@ -38,7 +37,7 @@
 						<label> Student Email</label>
 						 <input type="text"
 							name="email" 
-							th:field="email"
+							th:field="*{email}"
 							class="form_control"
 							 placeholder="Enter Student Email"
 							/>
